# Legal-Chain-Rust-

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
crates/common-types/: Cargo.toml
crates/common-types/src/: lib.rs
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  DATA_CLASSIFICATION.md  DECISIONS.md  EVENT_MODEL.md  OPERATOR-SUMMARY.md  RUNBOOK_LOCAL.md  STORAGE_MODEL.md  THREAT_MODEL.md  VERSION_MATRIX.md
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/access-control/: Cargo.toml
pallets/access-control/src/: lib.rs
pallets/agent-policy/: Cargo.toml
pallets/agent-policy/src/: lib.rs
pallets/approvals/: Cargo.toml
pallets/approvals/src/: lib.rs
pallets/audit/: Cargo.toml
pallets/audit/src/: lib.rs
pallets/documents/: Cargo.toml
pallets/documents/src/: lib.rs
pallets/evidence/: Cargo.toml
pallets/evidence/src/: lib.rs
pallets/identities/: Cargo.toml
pallets/identities/src/: lib.rs
pallets/matters/: Cargo.toml
pallets/matters/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: bootstrap-local.ps1  bootstrap-local.sh
services/explorer-api/: Cargo.toml
services/explorer-api/src/: db.rs  handlers.rs  main.rs  routes.rs
services/indexer/: Cargo.toml
services/indexer/migrations/: 001_blocks_events.sql  002_domain_entities.sql
services/indexer/src/: db.rs  decoder.rs  main.rs  subscriber.rs
services/proof-service/: Cargo.toml
services/proof-service/src/: handlers.rs  main.rs  proofs.rs  rpc.rs
