[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/matters",
    "pallets/evidence",
    "pallets/documents",
    "pallets/audit",
    "crates/common-types",
]

[workspace.package]
authors     = ["UNYKORN Legal Engineering <engineering@unykorn.org>"]
edition     = "2021"
license     = "BUSL-1.1"
repository  = "https://github.com/FTHTrading/legal-chain-core"
homepage    = "https://law.unykorn.org"

# ─── Workspace Dependencies ────────────────────────────────────────
# All Polkadot SDK deps pinned to a single stable tag.
# Update VERSION_MATRIX.md when bumping.
[workspace.dependencies]

# Parity SCALE codec
codec        = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info   = { version = "2.11", default-features = false, features = ["derive"] }

# Serde (std-only contexts: node, indexer, explorer)
serde        = { version = "1.0", default-features = false, features = ["derive"] }
serde_json   = "1.0"
log          = "0.4"
clap         = { version = ">=4.5.13, <=4.5.38", features = ["derive"] }

# ── Polkadot SDK — Frame ────────────────────────────────────────
frame-support            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-executive          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-benchmarking       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }

# ── Polkadot SDK — Substrate Primitives ─────────────────────────
sp-api                   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-block-builder         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus-aura        = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-consensus-grandpa     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-core                  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-genesis-builder       = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-inherents             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-io                    = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-offchain              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-runtime               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-session               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-std                   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-storage               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-transaction-pool      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-version               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
sp-blockchain            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-keyring               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sp-timestamp             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }

# ── Polkadot SDK — Standard Pallets ─────────────────────────────
pallet-aura              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-balances          = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-grandpa           = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-sudo              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-timestamp         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }
pallet-transaction-payment-rpc         = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409", default-features = false }

# ── Polkadot SDK — Substrate Client ─────────────────────────────
sc-basic-authorship      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-cli                   = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-client-api            = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-aura        = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-consensus-grandpa     = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-executor              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-keystore              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-network               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-offchain              = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-rpc-api               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-service               = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-telemetry             = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
sc-transaction-pool-api  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }

# ── Internal Crates ─────────────────────────────────────────────
legal-chain-common-types = { path = "crates/common-types", default-features = false }
legal-chain-runtime      = { path = "runtime" }
pallet-matters           = { path = "pallets/matters", default-features = false }
pallet-evidence          = { path = "pallets/evidence", default-features = false }
pallet-documents         = { path = "pallets/documents", default-features = false }
pallet-audit             = { path = "pallets/audit", default-features = false }

# ── Build Profiles ──────────────────────────────────────────────
[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto      = true
codegen-units = 1
