[package]
name = "legal-chain-node"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LEGAL-CHAIN Substrate node — Aura block authoring + GRANDPA finality"
build = "build.rs"

[[bin]]
name = "legal-chain-node"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
futures = "0.3"
jsonrpsee = { version = "0.24", features = ["server"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Substrate Client
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }

# Substrate Primitives
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sp-consensus-grandpa = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }

# RPC
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, features = ["std"] }

# Runtime
legal-chain-runtime = { workspace = true, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409" }

[features]
default = []
runtime-benchmarks = ["legal-chain-runtime/runtime-benchmarks"]
try-runtime = ["legal-chain-runtime/try-runtime"]
