[package]
name        = "legal-chain-indexer"
version     = "0.1.0"
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage.workspace    = true
description = "Off-chain block indexer — subscribes to finalized blocks, decodes events, writes to Postgres."

[[bin]]
name = "legal-chain-indexer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }

# HTTP / WebSocket client (Substrate JSON-RPC)
jsonrpsee   = { version = "0.22", features = ["ws-client", "http-client"] }

# Database
sqlx        = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# Substrate scale decoding (decode events / extrinsics off-chain)
codec       = { package = "parity-scale-codec", version = "3.6", features = ["derive"] }
scale-info  = { version = "2.11", features = ["derive"] }

# Serialization
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Hex encoding
hex = "0.4"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
anyhow = "1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }
